@@ -1,3 +1,8 @@
+2/10/2013
+---------------------------
+- KO Fixed #493 (Unable to adjust "Depth Tolerance Chceck [sic] for Duplicate Points" Values)
+- KO Fixed #452 (PyDeadObject errors when opening Merge Duplicate Points dialog multiple times)
+
 1/20/2013
 ---------------------------
 - KO Fixed #487 (Save Image)
